2004-06-26  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-util.c: 

	Added link to bug 145026

	* cong-tree-view.c:

	Removed debug spewage

	* cong-document.c (cong_document_get_dispspec_element_for_node): 

	Proper handling of case where doucument has no dispspec

2004-06-25  David Malcolm  <dmalcolm@redhat.com>

	* cong-dispspec-element.c, cong-dispspec-element.h, cong-ui-hooks.h, cong-util.c, cong-util.h, global.h, popup.c, tree.c, xmldata.c:

	Rewrite of popup menus so that they work with lists of CongElementDescription rather than CongDispspecElement, so that we don't
	need a dispspec, and can add elements that aren't in the dispspec if there is one.

2004-06-24 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	Changes in LOTS of files to cleanup gtk-doc usage and 
	suppress gtk-doc warnings. Patch part two.

2004-06-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-random.c: Namespace fixes

2004-06-23 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	Changes in LOTS of files to cleanup gtk-doc usage and 
	suppress gtk-doc warnings.	    

2004-06-21  David Malcolm  <dmalcolm@redhat.com>

	* cong-file-properties.c, cong-util.c, cong-util.h, plugin-validate.c

	Implemented cong_util_run_add_dtd_dialog, used by File->Properties dialog and the Validation plugin

	* cong-util.c (cong_util_run_add_dtd_dialog): 

	New placeholder function

2004-06-21 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
    
	* plugin-validate.c : Show details of validation.
	* cong-dialog.c : Fix layout of alert widget contents.

2004-06-21  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-plugin.c (cong_ui_new_document_from_manufactured_xml): 

	Allow the creation of new documents with no dispspec

	* Makefile.am, cong-app.c, cong-fake-plugin-hooks.h, plugin-arbitrary.c: 

	Added new plugin for creating documents of arbitrary type

2004-06-20  Nickolay V. Shmyrev <nshmyrev@yandex.ru>
